tests/NormalTests/paczka1/small_fuzzy/85245420.err
Error in line 7: 1c1jOq S197 56,8
Error in line 15: Lj1i A106 11,4
